--- a/polybar/config
+++ b/polybar/config
@@ -33,17 +33,14 @@ foreground = ${colors.foreground}
 
 line-size = 2
 
-;border-left-size = 15
-;border-right-size = 15
-;border-top-size = 10
-
 padding-left = 0
 padding-right = 1
 
 module-margin-left = 2
 module-margin-right = 2
 
-font-0 = artwiz lemon:pixelsize=8;1
+font-0 = "Artwiz Lemon:pixelsize=8;1"
+font-1 = FontAwesome:size=6;0
 
 modules-left = i3
 modules-right = spotify
@@ -73,8 +70,7 @@ type = internal/i3
 format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
-
-; Only show workspaces on the same output as the bar
+strip-wsnumbers = true
 pin-workspaces = true
 
 label-mode-padding = 2
@@ -82,25 +78,26 @@ label-mode-foreground = #000
 label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
-label-focused = %index%
+label-focused = %name%
 label-focused-background = ${module/bspwm.label-focused-background}
 label-focused-underline = ${module/bspwm.label-focused-underline}
 label-focused-padding = ${module/bspwm.label-focused-padding}
 
 ; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%
+label-unfocused = %name%
 label-unfocused-padding = ${module/bspwm.label-occupied-padding}
 
 ; visible = Active workspace on unfocused monitor
-label-visible = %index%
+label-visible = %name%
 label-visible-background =
 label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
-label-urgent = %index%
+label-urgent = %name%
 label-urgent-background = ${module/bspwm.label-urgent-background}
 label-urgent-padding = ${module/bspwm.label-urgent-padding}
+
 
 [module/date]
 type = internal/date
