--- a/.config/i3/config
+++ b/.config/i3/config
@@ -6,21 +6,21 @@
 set $mod Mod4
 
 # Font inside i3
-font pango: artwiz lemon 8
+font pango: xos4 terminus 8
 
 # Custom keybinds
-bindsym $mod+r exec rofi -show drun -fullscreen -hide-scrollbar -padding 300 -font "Roboto Mono 10"
-bindsym $mod+space exec rofi -show window -fullscreen -hide-scrollbar -padding 300 -font "Roboto Mono 10"
-bindsym Scroll_Lock exec sh /home/pim/scripts/lock.sh
-bindsym Print exec maim ~/screenshots/$(date +%d-%m-%Y).png -u -q 1 | ~/scripts/file_upload.sh ~/screenshots/$(date +%d-%m-%Y).png
-bindsym --release $mod+Print exec maim ~/screenshots/$(date +%d-%m-%Y).png -s -u -q 1 | ~/scripts/file_upload.sh ~/screenshots/$(date +%d-%m-%Y).png
+bindsym $mod+r exec rofi -show drun -fullscreen -hide-scrollbar -padding 300 -font "xos4 terminus 8"
+bindsym $mod+space exec rofi -show window -fullscreen -hide-scrollbar -padding 300 -font "xos4 terminus 8"
+bindsym Scroll_Lock exec sh /home/pim/scripts/betterlockscreen/lock.sh -l dimblur
+bindsym Print exec maim ~/screenshots/$(date +%d-%m-%Y).png -u -q 1
+bindsym --release $mod+Print exec maim ~/screenshots/$(date +%d-%m-%Y).png -s -u -q 1
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # Binded applications
 bindsym $mod+Return exec terminator
-bindsym $mod+c exec google-chrome-stable
+bindsym $mod+c exec firefox-developer-edition
 
 # Kill focused window
 bindsym $mod+Shift+q kill
@@ -50,6 +50,9 @@ bindsym $mod+f fullscreen toggle
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
+
+# change focus between tiling / floating windows
+bindsym $mod+Shift+d focus mode_toggle
 
 # Toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -90,23 +93,25 @@ bindsym $mod+Shift+0 move container to workspace 10
 # Assign workspaces to outputs
 workspace 1 output DVI-I-1
 workspace 2 output DVI-D-0
+workspace 7 output DVI-D-0
 workspace 8 output DVI-D-0
 workspace 9 output DVI-D-0
 workspace 10 output DVI-D-0
 
 # Assign applications to workspaces
+for_window [class="Telegram"] move to workspace 7
 for_window [class="discord"] move to workspace 8
 for_window [class="Slack"] move to workspace 8
 for_window [class="Terminator" title="WeeChat"] move to workspace 8
 for_window [class="Spotify"] move to workspace 9
-for_window [class="Nylas"] move to workspace 10
+for_window [class="Thunderbird"] move to workspace 10
 
 # Open application on startup
 exec --no-startup-id discord
 exec --no-startup-id slack
-exec --no-startup-id terminator -e weechat -T WeeChat
 exec --no-startup-id spotify
-exec --no-startup-id nylas-mail
+exec --no-startup-id thunderbird
+exec --no-startup-id telegram-desktop
 
 # Reload the configuration file
 bindsym $mod+Shift+c reload
@@ -126,7 +131,7 @@ exec --no-startup-id /usr/bin/compton --vsync none --refresh-rate 144
 exec --no-startup-id /usr/bin/dunst
 
 # Reload scripts
-exec_always --no-startup-id feh --bg-fill /home/pim/wallpapers/girl-in-woods.jpg
+exec_always --no-startup-id feh --bg-fill /home/pim/wallpapers/pink-girl.png
 exec_always --no-startup-id sh /home/pim/scripts/run_polybar.sh
 
 # Fix for background
@@ -138,8 +143,6 @@ focus_follows_mouse no
 
 # Gaps
 smart_gaps on
-gaps inner 6
-gaps outer 2
 
 # Media player controls
 bindsym XF86AudioStop exec playerctl stop
