--- a/polybar/config
+++ b/polybar/config
@@ -39,7 +39,7 @@ padding-right = 1
 module-margin-left = 2
 module-margin-right = 2
 
-font-0 = "Artwiz Lemon:pixelsize=8;1"
+font-0 = "Roboto Mono for Powerline:size=6;0"
 font-1 = FontAwesome:size=6;0
 
 modules-left = i3
