--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -18,20 +18,20 @@ alert = ${xrdb:color9}
 success = ${xrdb:color2}
 
 [global/wm]
-margin-top = 0
+margin-top = 1
 margin-bottom = 0
 
 [bar/primary]
 monitor = ${env:MONITOR}
 width = 100%
-height = 25
+height = 20
 radius = 0
 fixed-center = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 2
+line-size = 1
 
 padding-left = 0
 padding-right = 1
@@ -39,12 +39,11 @@ padding-right = 1
 module-margin-left = 2
 module-margin-right = 2
 
-font-0 = "Roboto Mono for Powerline:size=6;0"
-font-1 = FontAwesome:size=6;0
+font-0 = "Terminus:pixelsize=8;0"
 
 modules-left = i3
-modules-right = spotify
-modules-center = date
+modules-center = cpu 
+modules-right = date
 
 [module/bspwm]
 type = internal/bspwm
@@ -52,18 +51,18 @@ type = internal/bspwm
 label-focused = %index%
 label-focused-background = ${colors.background-alt}
 label-focused-underline= ${colors.primary}
-label-focused-padding = 2
+label-focused-padding = 1
 
 label-occupied = %index%
-label-occupied-padding = 2
+label-occupied-padding = 1
 
 label-urgent = %index%!
 label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+label-urgent-padding = 1
 
 label-empty = %index%
 label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2
+label-empty-padding = 1
 
 [module/i3]
 type = internal/i3
@@ -73,7 +72,7 @@ wrapping-scroll = false
 strip-wsnumbers = true
 pin-workspaces = true
 
-label-mode-padding = 2
+label-mode-padding = 1
 label-mode-foreground = #000
 label-mode-background = ${colors.primary}
 
@@ -103,21 +102,22 @@ label-urgent-padding = ${module/bspwm.label-urgent-padding}
 type = internal/date
 interval = 5
 
-date = "%A %d %B"
+date = "%d-%m-%Y%"
 
 time = %H:%M
 
 format-prefix-foreground = ${colors.foreground-alt}
 
-label = %date% %time%
+label = %time% %date%
+
+[module/cpu]
+type = internal/cpu
+
+; Seconds to sleep between updates
+; Default: 1
+interval = 0.5
+
+label = CPU %percentage%%
 
 [settings]
 screenchange-reload = true
-
-[module/spotify]
-type = custom/script
-exec = ~/.config/polybar/spotify.sh %artist% - %title%
-tail = true
-interval = 2
-format-prefix = 
-format-prefix-foreground = ${colors.foreground-alt}
