--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font "pango: Terminus Regular 8"
+font xos4 terminus 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -44,7 +44,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-bindsym $mod+Return exec terminator
+bindsym $mod+Return exec urxvt
 bindsym $mod+Shift+Return exec google-chrome-stable
 bindsym --release Print exec "flameshot gui"
 
@@ -174,6 +174,6 @@ client.background       $bg
 for_window [class="^.*"] border pixel 1
 
 # Reload scripts
-#exec_always --no-startup-id $HOME/.local/bin/wal --vte -i $HOME/Pictures/girl.png
-exec_always --no-startup-id feh --bg-fill $HOME/Pictures/girl.png
+exec_always --no-startup-id wal --vte -i $HOME/wallpapers/current.png &
+exec_always --no-startup-id feh --bg-fill $HOME/wallpapers/current.png
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
