--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -39,10 +39,10 @@ padding-right = 1
 module-margin-left = 2
 module-margin-right = 2
 
-font-0 = "Terminus:pixelsize=8;0"
+font-0 = "xos4 Terminus:pixelsize=8;0"
 
 modules-left = i3
-modules-center = cpu 
+modules-center = cpu memory filesystem
 modules-right = date
 
 [module/bspwm]
@@ -115,9 +115,38 @@ type = internal/cpu
 
 ; Seconds to sleep between updates
 ; Default: 1
-interval = 0.5
+interval = 5
 
 label = CPU %percentage%%
+
+[module/filesystem]
+type = internal/fs
+
+; Mountpoints to display
+mount-0 = /
+
+; Seconds to sleep between updates
+; Default: 30
+interval = 10
+
+; Display fixed precision values
+; Default: false
+fixed-values = true
+
+; Spacing between entries
+; Default: 2
+spacing = 4
+
+label-mounted = SSD %percentage_used%% 
+
+[module/memory]
+type = internal/memory
+
+; Seconds to sleep between updates
+; Default: 1
+interval = 5
+
+label = RAM %percentage_used%%
 
 [settings]
 screenchange-reload = true
