Local customizable polybar

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -44,7 +44,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec terminator
 bindsym $mod+Shift+Return exec google-chrome-stable
 bindsym --release Print exec "flameshot gui"
 
