Added battery status to polybar

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -44,7 +44,7 @@ module-margin-right = 2
 font-0 = "xos4 Terminus:pixelsize=8;0"
 
 modules-left = i3
-modules-center = cpu memory filesystem
+modules-center = cpu memory filesystem battery
 modules-right = date
 
 [module/bspwm]
@@ -149,6 +149,30 @@ type = internal/memory
 interval = 5
 
 label = RAM %percentage_used%%
+
+[module/battery]
+type = internal/battery
+
+; This is useful in case the battery never reports 100% charge
+full-at = 99
+
+; Use the following command to list batteries and adapters:
+; $ ls -1 /sys/class/power_supply/
+battery = BAT0
+adapter = ADP1
+
+; If an inotify event haven't been reported in this many
+; seconds, manually poll for new values.
+;
+; Needed as a fallback for systems that don't report events
+; on sysfs/procfs.
+;
+; Disable polling by setting the interval to 0.
+;
+; Default: 5
+poll-interval = 5
+
+label-discharging = BAT %percentage%%
 
 [settings]
 screenchange-reload = true
