--- a/.config/i3/config
+++ b/.config/i3/config
@@ -33,6 +33,9 @@ exec --no-startup-id nm-applet
 # Startup scripts
 exec --no-startup-id /usr/bin/compton --refresh-rate 144
 
+exec --no-startup-id setxkbmap -option caps:escape
+exec --no-startup-id xrdb ~/.Xresources
+
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
@@ -177,5 +180,3 @@ for_window [class="^.*"] border pixel 1
 exec_always --no-startup-id wal --vte -i $HOME/wallpapers/current.png &
 exec_always --no-startup-id feh --bg-fill $HOME/wallpapers/current.png
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-
-setxkbmap -option caps:escape
