--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -41,7 +41,7 @@ padding-right = 1
 module-margin-left = 2
 module-margin-right = 2
 
-font-0 = "xos4 Terminus:pixelsize=8;0"
+font-0 = "ProggyCleanTT:size=12;0"
 
 modules-left = i3
 modules-center = cpu memory filesystem battery
