--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,8 +3,12 @@ set -g default-terminal "screen-256color"
 set -g status-bg black
 set -g status-fg white
 
+set -g base-index 1
+
 unbind C-b
 set-option -g prefix C-Space
 bind-key C-Space send-prefix
 
-set -g base-index 1
+set-window-option -g mode-keys vi
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
