--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -9,6 +9,9 @@ unbind C-b
 set-option -g prefix C-Space
 bind-key C-Space send-prefix
 
+set -g status-left ''
+set -g status-right '%H:%M %d-%m-%Y'
+
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
