--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -7,6 +7,7 @@ set -g base-index 1
 
 unbind C-b
 set-option -g prefix C-Space
+set-option -g status-position top
 bind-key C-Space send-prefix
 
 set -g status-left ''
