--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,16 +3,20 @@ set -g default-terminal "screen-256color"
 set -g status-bg black
 set -g status-fg white
 
+set -g renumber-windows on
 set -g base-index 1
 
 unbind C-b
 set-option -g prefix C-Space
 set-option -g status-position top
+set-option -g status-justify absolute-centre
+
 bind-key C-Space send-prefix
 
 set -g status-left ''
-set -g status-right '%H:%M %d-%m-%Y'
+set -g status-right ''
 
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -r Space last-window
