feat(tmux): add local configuration support

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -21,3 +21,5 @@ bind -r Space last-window
 
 set-option -g status-bg '#000000'
 set-option -g status-fg '#ffffff'
+
+if-shell 'test -f ~/.config/tmux/tmux.local.conf' 'source-file ~/.config/tmux/tmux.local.conf'
